--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -54,7 +54,7 @@
   
         <div class="mt-3">
           <label for="featuredImageUrl" class="form-label">Featured Image Url
-            <button type="button" class="btn btn-light" >Select Image</button>
+            <button type="button" class="btn btn-light"(click)="openImageSelector()" >Select Image</button>
           </label>
   
           <ng-container *ngIf="model.featuredImageUrl !== ''">
@@ -119,7 +119,7 @@
   </div>
   
   
-  <!-- <div class="images-container-modal" [ngClass]="{'d-block': isImageSelectorVisible, 'd-none': !isImageSelectorVisible}">
+  <div class="images-container-modal" [ngClass]="{'d-block': isImageSelectorVisible, 'd-none': !isImageSelectorVisible}">
     <button type="button" class="btn btn-light" style="position: fixed; top: 10px;right: 10px" (click)="closeImageSelector()">X</button>
     <app-image-selector></app-image-selector>
-  </div> -->
+  </div>
