--- a/src/app/features/public/details/details.component.html
+++ b/src/app/features/public/details/details.component.html
@@ -15,6 +15,7 @@
           <div *ngIf="blogPost.categories" class="mt-4">
             <span class="badge bg-secondary me-2" *ngFor="let category of blogPost.categories">
               {{category.name}}
+              {{category.urlHandle}}
             </span>
           </div>
   
